Migrate Guava functional thing to Java